feat: crated nav bar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="menu">
+            <div id="logo">Business</div>
+            <div class="menu-item">HOME</div>
+            <div class="menu-item">FEATURES</div>
+            <div class="menu-item">DETAILS</div>
+            <div class="menu-item">PRICING</div>
+            <div class="menu-item">VIDEO</div>
+            <div class="menu-item round-btn">LOGIN</div>
+           </div>
+    </div>
+
+   <div id="home">
+    home content
+   </div>
+
+   <div id="features">
+    features content
+   </div> 
+
+   <div id="details">
+    details content
+   </div>
+
+   <div id="pricing">
+    pricing content
+   </div> 
+
+   <div id="video">
+    video content
+   </div>   
+
+   <div id="testimonials">
+    testimonials content
+   </div> 
+
+   <div id="subscribe">
+    subscriber content
+   </div>
+
+   <div id="footer">
+    footer content
+   </div> 
 </body>
 </html>
