--- a/index.html
+++ b/index.html
@@ -40,17 +40,28 @@
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#5E3DEE" fill-opacity="1" d="M0,64L18.5,90.7C36.9,117,74,171,111,208C147.7,245,185,267,222,272C258.5,277,295,267,332,224C369.2,181,406,107,443,64C480,21,517,11,554,48C590.8,85,628,171,665,202.7C701.5,235,738,213,775,181.3C812.3,149,849,107,886,117.3C923.1,128,960,192,997,186.7C1033.8,181,1071,107,1108,80C1144.6,53,1182,75,1218,117.3C1255.4,160,1292,224,1329,261.3C1366.2,299,1403,309,1422,314.7L1440,320L1440,0L1421.5,0C1403.1,0,1366,0,1329,0C1292.3,0,1255,0,1218,0C1181.5,0,1145,0,1108,0C1070.8,0,1034,0,997,0C960,0,923,0,886,0C849.2,0,812,0,775,0C738.5,0,702,0,665,0C627.7,0,591,0,554,0C516.9,0,480,0,443,0C406.2,0,369,0,332,0C295.4,0,258,0,222,0C184.6,0,148,0,111,0C73.8,0,37,0,18,0L0,0Z"></path></svg>
 
 <div class="outer-container">
-    <div class="marketing"><h2>Marketing</h2></div>
+    <div class="marketing"><h2>Marketing Automations Will Brign More Qualified Leads</h2></div>
     <div class="cards">
         <div class="marketing-card">
             <div>
-                <img src="/images/undraw_All_the_data_re_hh4w.png">
+                <img src="/images/undraw_Maintenance_re_59vn.png">
             </div>
             <div class="title-text">
-                Title
+                Lists Builder
             </div>
+            <div class="soft">
+                Its very easy to start creating email lists for your marketing actions. Just create your account
+            </div>
+        </div>
+        <div class="marketing-card">
             <div>
-                description
+                <img src="/images/undraw_Marketing_re_7f1g.png">
+            </div>
+            <div class="title-text">
+                Campaign Tracker
+            </div>
+            <div class="soft">
+                Campaign is a feature we have developed since the beginning because its at the core of Pay functionalities
             </div>
         </div>
         <div class="marketing-card">
@@ -58,21 +69,10 @@
                 <img src="/images/undraw_All_the_data_re_hh4w.png">
             </div>
             <div class="title-text">
-                Title
+                Analytics Tool
             </div>
-            <div>
-                description
-            </div>
-        </div>
-        <div class="marketing-card">
-            <div>
-                <img src="/images/undraw_All_the_data_re_hh4w.png">
-            </div>
-            <div class="title-text">
-                Title
-            </div>
-            <div>
-                description
+            <div class="soft">
+                Pay collects customer data in order to help you analyse different situations and take require action
             </div>
         </div>
     </div>
