feat: completed pricing section

--- a/index.html
+++ b/index.html
@@ -79,16 +79,86 @@
 
 </div>
 
-   <div id="features">
-    features content
-   </div> 
-
-   <div id="details">
-    details content
-   </div>
-
    <div id="pricing">
-    pricing content
+    <div class="price-title">
+        <h2>Pricing Options</h2>
+    </div>
+    <div class="price-cards">
+        <div class="price-card">
+            <div class="price-info">
+                <div class="plan">
+                    BASIC
+                </div>
+                <div class="price">
+                    $0 
+                </div>
+                <div class="trial">
+                    14 Days Trial
+                </div>
+            </div>
+            <hr>
+            <ul class="features">
+                <li>Email Marketing Module</li>
+                <li>User Control Management</li>
+                <li>List Building And Cleaning</li>
+                <li>Collected Data Reports</li>
+                <li>Planning And Evaluation</li>
+            </ul>
+            <div class="action">
+                <button class="round-btn">Sign Up </button>
+            </div>
+        </div>
+
+        <div class="price-card">
+            <div class="price-info">
+                <div class="plan">
+                    PRO
+                </div>
+                <div class="price">
+                    $9.99
+                </div>
+                <div class="trial">
+                    monthly
+                </div>
+            </div>
+            <hr>
+            <ul class="features">
+                <li>Email Marketing Module</li>
+                <li>User Control Management</li>
+                <li>List Building And Cleaning</li>
+                <li>Collected Data Reports</li>
+                <li>Planning And Evaluation</li>
+            </ul>
+            <div class="action">
+                <button class="round-btn">Sign Up </button>
+            </div>
+        </div>
+
+        <div class="price-card">
+            <div class="price-info">
+                <div class="plan">
+                    PRO MAX
+                </div>
+                <div class="price">
+                    $20
+                </div>
+                <div class="trial">
+                    monthly
+                </div>
+            </div>
+            <hr>
+            <ul class="features">
+                <li>Email Marketing Module</li>
+                <li>User Control Management</li>
+                <li>List Building And Cleaning</li>
+                <li>Collected Data Reports</li>
+                <li>Planning And Evaluation</li>
+            </ul>
+            <div class="action">
+                <button class="round-btn">Sign Up </button>
+            </div>
+        </div>
+    </div>
    </div> 
 
    <div id="video">
