feat: added tetomonial image

--- a/index.html
+++ b/index.html
@@ -159,14 +159,16 @@
             </div>
         </div>
     </div>
-   </div> 
-
-   <div id="video">
-    video content
    </div>   
 
    <div id="testimonials">
-    testimonials content
+    <div class="profile-image">
+        <img src="images/sanjay.jpg">
+    </div>
+    <div class="feedback">
+        <p>Pay is the best marketing automation application fro small and medium size business. It understands the mindset of young entrepreneurs and provides the necessary data for wise marketing decisions. Just try it and you will definitly not regret spending your money. </p>
+        <p class="name">Sanjay Guwaju - CEO of PORTPRO</p>
+    </div>
    </div> 
 
    <div id="subscribe">
