adding new changes

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
    <div id="testimonials">
     <div class="profile-image">
-        <img src="images/sanjay.jpg">
+        <img src="images/sanjay2.png">
     </div>
     <div class="feedback">
         <p>Pay is the best marketing automation application fro small and medium size business. It understands the mindset of young entrepreneurs and provides the necessary data for wise marketing decisions. Just try it and you will definitly not regret spending your money. </p>
