feat: Testimonial Section Completed.

--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
         <img src="images/sanjay2.png">
     </div>
     <div class="feedback">
-        <p>Pay is the best marketing automation application fro small and medium size business. It understands the mindset of young entrepreneurs and provides the necessary data for wise marketing decisions. Just try it and you will definitly not regret spending your money. </p>
+        <p>"Pay is the best marketing automation application fro small and medium size business. It understands the mindset of young entrepreneurs and provides the necessary data for wise marketing decisions. Just try it and you will definitly not regret spending your money" </p>
         <p class="name">Sanjay Guwaju - CEO of PORTPRO</p>
     </div>
    </div> 
 
    <div id="subscribe">
-    subscriber content
+    
    </div>
 
    <div id="footer">
