--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,40 +8,47 @@
     <title>SaaS Landing Page</title>
 </head>
 
-    <div class="container">
-        <div id="menu">
-            <div id="logo">Pay</div>
-            <div class="menu-item">HOME</div>
-            <div class="menu-item">FEATURES</div>
-            <div class="menu-item">DETAILS</div>
-            <div class="menu-item">PRICING</div>
-            <div class="menu-item">VIDEO</div>
-            <div class="menu-item round-btn">LOGIN</div>
-           </div>
+<div class="container">
+    <div id="menu">
+        <div id="logo">Pay</div>
+        <div class="menu-item">HOME</div>
+        <div class="menu-item">FEATURES</div>
+        <div class="menu-item">DETAILS</div>
+        <div class="menu-item">PRICING</div>
+        <div class="menu-item">VIDEO</div>
+        <div class="menu-item round-btn">LOGIN</div>
     </div>
+</div>
 
 <div class="container">
-   <div id="home">
-    <div class="title">
-        <div>
-            <h1>SaaS App HTML Landing Page</h1>
+    <div id="home">
+        <div class="title">
+            <div>
+                <h1>SaaS App HTML Landing Page</h1>
+            </div>
+            <div>
+                <p>We are the leading online firm to automate your marketing actions in order to build your business
+                </p>
+            </div>
+            <div>
+                <button class="signup-btn">Sign Up</button>
+            </div>
         </div>
-        <div>
-            <p>We are the leading online  firm to automate your marketing actions in order to build your business </p>
-        </div>
-        <div>
-            <button class="signup-btn">Sign Up</button>
+        <div class="title-graphics">
+            <img src="/images/home.png" alt="">
         </div>
     </div>
-    <div class="title-graphics">
-        <img src="/images/home.png" alt="">
-    </div>
-   </div>
 </div>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#5E3DEE" fill-opacity="1" d="M0,64L18.5,90.7C36.9,117,74,171,111,208C147.7,245,185,267,222,272C258.5,277,295,267,332,224C369.2,181,406,107,443,64C480,21,517,11,554,48C590.8,85,628,171,665,202.7C701.5,235,738,213,775,181.3C812.3,149,849,107,886,117.3C923.1,128,960,192,997,186.7C1033.8,181,1071,107,1108,80C1144.6,53,1182,75,1218,117.3C1255.4,160,1292,224,1329,261.3C1366.2,299,1403,309,1422,314.7L1440,320L1440,0L1421.5,0C1403.1,0,1366,0,1329,0C1292.3,0,1255,0,1218,0C1181.5,0,1145,0,1108,0C1070.8,0,1034,0,997,0C960,0,923,0,886,0C849.2,0,812,0,775,0C738.5,0,702,0,665,0C627.7,0,591,0,554,0C516.9,0,480,0,443,0C406.2,0,369,0,332,0C295.4,0,258,0,222,0C184.6,0,148,0,111,0C73.8,0,37,0,18,0L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#5E3DEE" fill-opacity="1"
+        d="M0,64L18.5,90.7C36.9,117,74,171,111,208C147.7,245,185,267,222,272C258.5,277,295,267,332,224C369.2,181,406,107,443,64C480,21,517,11,554,48C590.8,85,628,171,665,202.7C701.5,235,738,213,775,181.3C812.3,149,849,107,886,117.3C923.1,128,960,192,997,186.7C1033.8,181,1071,107,1108,80C1144.6,53,1182,75,1218,117.3C1255.4,160,1292,224,1329,261.3C1366.2,299,1403,309,1422,314.7L1440,320L1440,0L1421.5,0C1403.1,0,1366,0,1329,0C1292.3,0,1255,0,1218,0C1181.5,0,1145,0,1108,0C1070.8,0,1034,0,997,0C960,0,923,0,886,0C849.2,0,812,0,775,0C738.5,0,702,0,665,0C627.7,0,591,0,554,0C516.9,0,480,0,443,0C406.2,0,369,0,332,0C295.4,0,258,0,222,0C184.6,0,148,0,111,0C73.8,0,37,0,18,0L0,0Z">
+    </path>
+</svg>
 
 <div class="outer-container">
-    <div class="marketing"><h2>Marketing Automations Will Brign More Qualified Leads</h2></div>
+    <div class="marketing">
+        <h2>Marketing Automations Will Brign More Qualified Leads</h2>
+    </div>
     <div class="cards">
         <div class="marketing-card">
             <div>
@@ -61,7 +69,8 @@
                 Campaign Tracker
             </div>
             <div class="soft">
-                Campaign is a feature we have developed since the beginning because its at the core of Pay functionalities
+                Campaign is a feature we have developed since the beginning because its at the core of Pay
+                functionalities
             </div>
         </div>
         <div class="marketing-card">
@@ -79,7 +88,7 @@
 
 </div>
 
-   <div id="pricing">
+<div id="pricing">
     <div class="price-title">
         <h2>Pricing Options</h2>
     </div>
@@ -90,7 +99,7 @@
                     BASIC
                 </div>
                 <div class="price">
-                    $0 
+                    $0
                 </div>
                 <div class="trial">
                     14 Days Trial
@@ -159,24 +168,39 @@
             </div>
         </div>
     </div>
-   </div>   
+</div>
 
-   <div id="testimonials">
+<div id="testimonials">
     <div class="profile-image">
         <img src="images/sanjay2.png">
     </div>
     <div class="feedback">
-        <p>"Pay is the best marketing automation application fro small and medium size business. It understands the mindset of young entrepreneurs and provides the necessary data for wise marketing decisions. Just try it and you will definitly not regret spending your money" </p>
+        <p>"Pay is the best marketing automation application fro small and medium size business. It understands the
+            mindset of young entrepreneurs and provides the necessary data for wise marketing decisions. Just try it and
+            you will definitly not regret spending your money" </p>
         <p class="name">Sanjay Guwaju - CEO of PORTPRO</p>
     </div>
-   </div> 
+</div>
 
-   <div id="subscribe">
-    
-   </div>
+<div id="subscribe">
+    <div class="price-title">
+        <h2>Stay Updated With The Latest News To Get More Qualified Leads</h2>
+    </div>
+    <div>
+        <input type="text" name="email" placeholder="Email">
+    </div>
+    <div>
+        <input type="checkbox">
+        <span>I've read and agree to Pay's written Privacy Policy and Terms Conditions</span>
+    </div>
+    <button>Subscribe</button>
 
-   <div id="footer">
+
+</div>
+
+<div id="footer">
     footer content
-   </div> 
+</div>
 </body>
+
 </html>
