--- a/index.html
+++ b/index.html
@@ -186,16 +186,16 @@
     <div class="price-title">
         <h2>Stay Updated With The Latest News To Get More Qualified Leads</h2>
     </div>
-    <div>
-        <input type="text" name="email" placeholder="Email">
+    <div class="form">
+        <div>
+            <input class="email" type="text" name="email" placeholder="Email">
+        </div>
+        <div class="agree">
+            <input type="checkbox">
+            <span>I've read and agree to Pay's written Privacy Policy and Terms Conditions</span>
+        </div>
+        <button class="subscribe">Subscribe</button>
     </div>
-    <div>
-        <input type="checkbox">
-        <span>I've read and agree to Pay's written Privacy Policy and Terms Conditions</span>
-    </div>
-    <button>Subscribe</button>
-
-
 </div>
 
 <div id="footer">
