added: footer body

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 </div>
 
 <div id="subscribe">
-    <div class="price-title">
+    <div class="subs-title">
         <h2>Stay Updated With The Latest News To Get More Qualified Leads</h2>
     </div>
     <div class="form">
@@ -194,13 +194,35 @@
             <input type="checkbox">
             <span>I've read and agree to Pay's written Privacy Policy and Terms Conditions</span>
         </div>
-        <button class="subscribe">Subscribe</button>
+        <div class="action">
+            <button class="subscribe round-btn">Subscribe</button>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div id="footer">
+        <div class="footer-section">
+            <h3>About</h3>
+            We're passionate about designing and developing one of the best marketing app in the market
+        </div>
+        <div class="footer-section">
+            <h3>Important Links</h3>
+            <ul>
+                <li>link 1</li>
+                <li>link 2</li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Contacts</h3>
+            <ul>
+                <li>link 1</li>
+                <li>link 2</li>
+            </ul>
+        </div>
+
     </div>
 </div>
 
-<div id="footer">
-    footer content
-</div>
 </body>
 
 </html>
