--- a/index.html
+++ b/index.html
@@ -199,28 +199,35 @@
         </div>
     </div>
 </div>
+
+<svg class="footer-frame" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#5E3DEE" fill-opacity="1" d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,192C305.5,235,349,277,393,288C436.4,299,480,277,524,234.7C567.3,192,611,128,655,128C698.2,128,742,192,785,181.3C829.1,171,873,85,916,80C960,75,1004,149,1047,192C1090.9,235,1135,245,1178,229.3C1221.8,213,1265,171,1309,160C1352.7,149,1396,171,1418,181.3L1440,192L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path></svg>
 <div class="container">
     <div id="footer">
         <div class="footer-section">
             <h3>About</h3>
             We're passionate about designing and developing one of the best marketing app in the market
         </div>
-        <div class="footer-section">
+        <div class="footer-section rect">
             <h3>Important Links</h3>
             <ul>
-                <li>link 1</li>
-                <li>link 2</li>
+                <li>Our Business Partners startupguide.com</li>
+                <li>Read our Terms & Conditions Privacy Policy</li>
             </ul>
         </div>
         <div class="footer-section">
             <h3>Contacts</h3>
             <ul>
-                <li>link 1</li>
-                <li>link 2</li>
+                <li>Radhe Radhe, Madhyapurthimi, Bhaktapur, Nepal</li>
+                <li>rohanprajapati369@gmail.com & www.pay.com</li>
             </ul>
         </div>
 
     </div>
+    <div class="copyright">
+        <hr class="light-hr">
+        <p>Copyright @ 2024 Template by Rohan Prajapati</p>
+    </div>
+   
 </div>
 
 </body>
