feat: completed landing page

--- a/index.html
+++ b/index.html
@@ -225,11 +225,8 @@
     </div>
     <div class="copyright">
         <hr class="light-hr">
-        <p>Copyright @ 2024 Template by Rohan Prajapati</p>
-    </div>
-   
+        <p>Copyright @ 2024 Landing Page by Rohan Prajapati</p>
+    </div>  
 </div>
-
 </body>
-
 </html>
