--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>SaaS Landing Page</title>
 </head>
 
@@ -217,8 +218,8 @@
         <div class="footer-section">
             <h3>Contacts</h3>
             <ul>
-                <li>Radhe Radhe, Madhyapurthimi, Bhaktapur, Nepal</li>
-                <li>rohanprajapati369@gmail.com & www.pay.com</li>
+                <li><i class="fa-solid fa-location-dot"></i> Radhe Radhe, Madhyapurthimi, Bhaktapur, Nepal</li>
+                <li><i class="fa-solid fa-envelope"></i>  rohanprajapati369@gmail.com   <i class="fa-solid fa-globe"></i> www.pay.com</li>
             </ul>
         </div>
 
