--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
             </div>
             <hr>
             <ul class="features">
-                <li>Email Marketing Module</li>
-                <li>User Control Management</li>
-                <li>List Building And Cleaning</li>
-                <li>Collected Data Reports</li>
-                <li>Planning And Evaluation</li>
+                <li><i class="fa-regular fa-circle-xmark" style="color: #000000;"></i> Email Marketing Module</li>
+                <li><i class="fa-regular fa-circle-xmark" style="color: #000000;"></i> User Control Management</li>
+                <li><i class="fa-regular fa-circle-xmark" style="color: #000000;"></i> List Building And Cleaning</li>
+                <li><i class="fa-regular fa-circle-xmark" style="color: #000000;"></i> Collected Data Reports</li>
+                <li><i class="fa-regular fa-circle-xmark" style="color: #000000;"></i> Planning And Evaluation</li>
             </ul>
             <div class="action">
                 <button class="round-btn">Sign Up </button>
@@ -133,11 +133,11 @@
             </div>
             <hr>
             <ul class="features">
-                <li>Email Marketing Module</li>
-                <li>User Control Management</li>
-                <li>List Building And Cleaning</li>
-                <li>Collected Data Reports</li>
-                <li>Planning And Evaluation</li>
+                <li><i class="fa-regular fa-circle-check" style="color: #5e3dee;"></i> Email Marketing Module</li>
+                <li><i class="fa-regular fa-circle-check" style="color: #5e3dee;"></i> User Control Management</li>
+                <li><i class="fa-regular fa-circle-check" style="color: #5e3dee;"></i> List Building And Cleaning</li>
+                <li><i class="fa-regular fa-circle-xmark" style="color: #000000;"></i> Collected Data Reports</li>
+                <li><i class="fa-regular fa-circle-xmark" style="color: #000000;"></i> Planning And Evaluation</li>
             </ul>
             <div class="action">
                 <button class="round-btn">Sign Up </button>
@@ -158,11 +158,11 @@
             </div>
             <hr>
             <ul class="features">
-                <li>Email Marketing Module</li>
-                <li>User Control Management</li>
-                <li>List Building And Cleaning</li>
-                <li>Collected Data Reports</li>
-                <li>Planning And Evaluation</li>
+                <li><i class="fa-regular fa-circle-check" style="color: #5e3dee;"></i> Email Marketing Module</li>
+                <li><i class="fa-regular fa-circle-check" style="color: #5e3dee;"></i>  User Control Management</li>
+                <li><i class="fa-regular fa-circle-check" style="color: #5e3dee;"></i>  List Building And Cleaning</li>
+                <li><i class="fa-regular fa-circle-check" style="color: #5e3dee;"></i>  Collected Data Reports</li>
+                <li><i class="fa-regular fa-circle-check" style="color: #5e3dee;"></i>  Planning And Evaluation</li>
             </ul>
             <div class="action">
                 <button class="round-btn">Sign Up </button>
@@ -198,6 +198,24 @@
         <div class="action">
             <button class="subscribe round-btn">Subscribe</button>
         </div>
+    </div>
+</div>
+
+<div class="social">
+    <div>
+        <i class="fa-brands fa-instagram" style="color: #5E3DEE;"></i>
+    </div>
+    <div>
+        <i class="fa-brands fa-facebook" style="color: #0a2ee6;"></i>
+    </div>
+    <div>
+        <i class="fa-brands fa-github" style="color: #05070b;"></i>
+    </div>
+    <div>
+        <i class="fa-brands fa-linkedin" style="color: #0b4ec1;"></i>
+    </div>
+    <div>
+        <i class="fa-brands fa-apple" style="color: #302c2c;"></i>
     </div>
 </div>
 
