--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 <div class="social">
     <div>
-        <i class="fa-brands fa-instagram" style="color: #5E3DEE;"></i>
+        <i class="fa-brands fa-instagram" style="color: #d63dee;"></i>
     </div>
     <div>
         <i class="fa-brands fa-facebook" style="color: #0a2ee6;"></i>
