--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
     </div>
 </div>
 
+<header class="header">
+    <div id="logo">Pay</div>
+    <div class="hamburger">
+        <input type="checkbox" name="" id="" class="check">
+        <ul class="menu-items">
+          <li><a href="https://google.com" target="_blank">HOME</a></li>
+          <li><a href="https://google.com" target="_blank">FEATURES</a></li>
+          <li><a href="https://www.instagram.com/rohanprajapatitachi/" target="_blank">DETAILS</a></li>
+          <li><a href="https://google.com" target="_blank">PRICING</a></li>
+          <li><a href="https://google.com" target="_blank">VIDEO</a></li>
+          <li><a href="https://google.com" target="_blank">LOGIN</a></li>
+
+        </ul>
+        <div class="ham-menu">
+          <span class="line line1"></span>
+          <span class="line line2"></span>
+          <span class="line line3"></span>
+        </div>
+    </div>
+</header>
+
 <div class="container">
     <div id="home">
         <div class="title">
